--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');</script>  
+      ga('create','UA-60311614-1');ga('send','pageview');</script>  
