Improve overall styles

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset=utf-8>
     <title>Jose Tovar - Web Engineer</title>
-    <meta name=description content="Jose Tovar is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility, content management systems and JavaScript based web applications.">
+    <meta name=description content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
     <!-- Social meta tags -->
     <meta name=author content="Jose Tovar">
     <meta name=subject content="frontend development">
-    <meta name=description content="Jose Tovar is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility, content management systems and JavaScript based web applications.">
-    <meta name=classification content="Jose Tovar is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility, content management systems and JavaScript based web applications.">
+    <meta name=description content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
+    <meta name=classification content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
     <meta name=keywords content="frontend, developer, web developer, javascript, html5, front-end, web ui">
     <meta name=language content=english>
     <meta http-equiv=cache-control content=no-cache>
@@ -18,7 +18,7 @@
     <meta property=og:url content="http://tmjoseantonio.com">
     <meta property=og:type content="website">
     <meta property=og:title content="Jose Tovar - Web Engineer">
-    <meta property=og:description content="Jose Tovar is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility, content management systems and JavaScript based web applications.">
+    <meta property=og:description content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
     <meta property=og:image content="http://tmjoseantonio.com/jose-antonio-tovar-frontend-webui-developer.jpg">
     <meta name=twitter:card content="summary">
     <meta name=twitter:site content="@tmjoseantonio">
@@ -73,15 +73,14 @@
           </li>
         </ul>
       </nav>
-      <a href="#more-about-jose">More about Jose</a>
+      <a href="#more-about-jose">&lt; More about Jose &gt;</a>
     </section>
     <section class="fullpage-section" id="more-about-jose">
       <div class="profile-summary">
-        <p>Jose Tovar is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility, content management systems and JavaScript based web applications.</p>
-        <p>He has provided development services as a Web Engineer for a wide variety of brands, companies, and U.S government offices tech providers. Along with digital agencies he has contributed to entities such as Apple, NASA, Nike, EA Sports, and Riot Games, among others.</p>
+        <p>Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications.</p>        
         <p>His goals as a Web Engineer are to integrate visual comps, user experience requirements, web accessibility standards, and SEO guidelines into well structured, readable and maintainable code.</p>
       </div>
-      <a href="#headline">Back to contact info</a>
+      <a href="#headline">&lt; Back to contact info &gt;</a>
     </section>
     <footer class="page-footer">
       <summary class="summary">&copy; Jose Tovar</summary>
