--- a/index.html
+++ b/index.html
@@ -1,102 +1,1 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
-  <head>
-    <meta charset=utf-8>
-    <title>Jose Tovar - Web Engineer</title>
-    <meta name=description content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
-    <!-- Social meta tags -->
-    <meta name=author content="Jose Tovar">
-    <meta name=subject content="frontend development">
-    <meta name=description content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
-    <meta name=classification content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
-    <meta name=keywords content="frontend, developer, web developer, javascript, html5, front-end, web ui">
-    <meta name=language content=english>
-    <meta http-equiv=cache-control content=no-cache>
-    <meta name=copyright content="Jose Tovar">
-    <meta name=distribution content=global>
-    <meta name=robots content=index,follow>
-    <meta property=og:url content="http://tmjoseantonio.com">
-    <meta property=og:type content="website">
-    <meta property=og:title content="Jose Tovar - Web Engineer">
-    <meta property=og:description content="Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications">
-    <meta property=og:image content="http://tmjoseantonio.com/jose-antonio-tovar-frontend-webui-developer.jpg">
-    <meta name=twitter:card content="summary">
-    <meta name=twitter:site content="@tmjoseantonio">
-    <meta name=twitter:creator content="@tmjoseantonio">
-    <!-- end: Social meta tags -->
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=apple-touch-icon sizes=57x57 href=src/apple-icon-57x57.png>
-    <link rel=apple-touch-icon sizes=60x60 href=src/apple-icon-60x60.png>
-    <link rel=apple-touch-icon sizes=72x72 href=src/apple-icon-72x72.png>
-    <link rel=apple-touch-icon sizes=76x76 href=src/apple-icon-76x76.png>
-    <link rel=apple-touch-icon sizes=114x114 href=src/apple-icon-114x114.png>
-    <link rel=apple-touch-icon sizes=120x120 href=src/apple-icon-120x120.png>
-    <link rel=apple-touch-icon sizes=144x144 href=src/apple-icon-144x144.png>
-    <link rel=apple-touch-icon sizes=152x152 href=src/apple-icon-152x152.png>
-    <link rel=apple-touch-icon sizes=180x180 href=src/apple-icon-180x180.png>
-    <link rel=icon type=image/png sizes=192x192 href=src/android-icon-192x192.png>
-    <link rel=icon type=image/png sizes=32x32 href=src/favicon-32x32.png>
-    <link rel=icon type=image/png sizes=96x96 href=src/favicon-96x96.png>
-    <link rel=icon type=image/png sizes=16x16 href=src/favicon-16x16.png>
-    <meta name=msapplication-TileColor content=#ffffff>
-    <meta name=msapplication-TileImage content=src/ms-icon-144x144.png>
-    <meta name=theme-color content=#ffffff>
-    <link rel=stylesheet href=styles/styles.css>
-  </head>
-
-  <body>
-    <!--[if lt IE 10]>
-    <section class="old-browser">
-      <p class="old-browser-text">Seriously? That browser?</p>
-      <img class="old-browser-image" src="src/shame.gif" alt="shame!" aria-label="shame - shame - shame">
-      <p class="old-browser-text">Check more options</p>
-      <a class="old-browser-link" href="http://browsehappy.com/" target="_blank" rel="nofollow">like these</a>
-    </section>
-    <![endif]-->
-    <section class="fullpage-section" id="headline">
-      <header class="page-header">
-        <h1 class="page-header__title">
-          <span>Jose Tovar</span>
-          <small class="page-header__title-small">Web Engineer, husband, gamer and a terrible musician</small>
-        </h1>
-      </header>
-      <nav class="contact-links">
-        <ul class="contact-links__list">
-          <li class="contact-links__list-item">
-            <a class="contact-links__link"target=_blank href=http://twitter.com/tmjoseantonio>Twitter</a>
-          </li>
-          <li class="contact-links__list-item">
-            <a class="contact-links__link"target=_blank href=http://github.com/tmjoseantonio>Github</a>
-          </li>
-          <li class="contact-links__list-item">
-            <a class="contact-links__link"target=_blank href=https://co.linkedin.com/in/josetovarfrontenddeveloper>LinkedIn</a>
-          </li>
-        </ul>
-      </nav>
-      <a href="#more-about-jose">&lt; More about Jose &gt;</a>
-    </section>
-    <section class="fullpage-section" id="more-about-jose">
-      <div class="profile-summary">
-        <p>Jose is a Web Engineer experienced in Web technologies with a strong background and knowledge of accessibility guidelines such as Section 508, W3C WAI, content management systems and JavaScript based web applications.</p>        
-        <p>His goals as a Web Engineer are to integrate visual comps, user experience requirements, web accessibility standards, and SEO guidelines into well structured, readable and maintainable code.</p>
-      </div>
-      <a href="#headline">&lt; Back to contact info &gt;</a>
-    </section>
-    <footer class="page-footer">
-      <summary class="summary">&copy; Jose Tovar</summary>
-    </footer>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-60311614-1');ga('send','pageview');
-    </script>
-    <noscript>
-      <section class="noscript">
-        <p class="noscript-message">No Javascript?<br>It doesn't matter! I'm so awesome you won't even noticed you don't need Javascript to contact me!</p>
-      </section>
-    </noscript>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><link href="/static/css/main.2b6280bf.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(a){function e(e){for(var t,r,n=e[0],o=e[1],u=e[2],i=0,l=[];i<n.length;i++)r=n[i],Object.prototype.hasOwnProperty.call(p,r)&&p[r]&&l.push(p[r][0]),p[r]=0;for(t in o)Object.prototype.hasOwnProperty.call(o,t)&&(a[t]=o[t]);for(s&&s(e);l.length;)l.shift()();return c.push.apply(c,u||[]),f()}function f(){for(var e,t=0;t<c.length;t++){for(var r=c[t],n=!0,o=1;o<r.length;o++){var u=r[o];0!==p[u]&&(n=!1)}n&&(c.splice(t--,1),e=i(i.s=r[0]))}return e}var r={},p={1:0},c=[];function i(e){if(r[e])return r[e].exports;var t=r[e]={i:e,l:!1,exports:{}};return a[e].call(t.exports,t,t.exports,i),t.l=!0,t.exports}i.m=a,i.c=r,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(t,e){if(1&e&&(t=i(t)),8&e)return t;if(4&e&&"object"==typeof t&&t&&t.__esModule)return t;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:t}),2&e&&"string"!=typeof t)for(var n in t)i.d(r,n,function(e){return t[e]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/";var t=this.webpackJsonptmjoseantonio=this.webpackJsonptmjoseantonio||[],n=t.push.bind(t);t.push=e,t=t.slice();for(var o=0;o<t.length;o++)e(t[o]);var s=n;f()}([])</script><script src="/static/js/2.fee6ae67.chunk.js"></script><script src="/static/js/main.e515fd15.chunk.js"></script></body></html>
