--- a/test.html
+++ b/test.html
@@ -6,6 +6,58 @@
     <title>iFrame test</title>
 </head>
 <body>
-    <iframe id="myPlayer" width="560" height="315" src="https://www.youtube.com/embed/Zaarj1-ucoY/?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <button id="playVideo">▶️ Play video</button>
+    <div id="iframeContainer"></div>
+
+    <script type="javascript">
+        const playVideoBtn = document.getElementById('playVideo');
+        const iframeContainer = document.getElementById('iframeContainer');
+
+        const frameContents = `<iframe width="560" height="315" src="https://www.youtube.com/embed/gL1FR5C8LOs/?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
+
+        let initialized = false;
+
+        playVideoBtn.addEventListener('click', () => {
+            if (!initialized) {
+              iframeContainer.style = 'display:block';
+            iframeContainer.innerHTML = frameContents;
+            initialized = true;
+            playVideoBtn.style = 'display:none';
+          }
+        });
+    </script>
+    
+    <style id="compiled-css" type="text/css">
+        #iframeContainer {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 0;
+          display:flex;
+          display: none;
+          justify-content: center;
+          align-items: center;
+        }
+
+        #iframeContainer::before {
+          position: absolute;
+          content: "";
+          width: 100%;
+          height: 100%;
+          background-color: black;
+          opacity: 0.3;
+          left: 0;
+          top: 0;
+          z-index: 1;
+        }
+
+        #iframeContainer iframe {
+          max-width: 100%;
+          max-height: 100%;
+          z-index: 2;
+          position: relative;
+        }        
+    </style>
 </body>
 </html>
