--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     <button id="playVideo">▶️ Play video</button>
     <div id="iframeContainer"></div>
 
-    <script type="javascript">
+    <script type="text/javascript">
         const playVideoBtn = document.getElementById('playVideo');
         const iframeContainer = document.getElementById('iframeContainer');
 
