--- a/test.html
+++ b/test.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iFrame test</title>
     <style id="compiled-css" type="text/css">
+        body, html {
+            margin: 0;
+            padding: 0;
+        }
         #iframeContainer {
           position: fixed;
           width: 100%;
