--- a/test.html
+++ b/test.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iFrame test</title>
     <style id="compiled-css" type="text/css">
-        body, html {
-            margin: 0;
-            padding: 0;
+        html, body {
+          margin: 0;
+          padding: 0;
         }
+
+        body {
+          min-height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
         #iframeContainer {
           position: fixed;
           width: 100%;
@@ -38,7 +46,24 @@
           max-height: 100%;
           z-index: 2;
           position: relative;
-        }        
+        }
+
+        #playVideo {
+          display: block;
+          padding: 10px;
+          font-size: 21px;
+          background-color: red;
+          color: white;
+          border-radius: 5px;
+          border: none;
+          cursor: pointer;
+          transition: opacity .2s linear, color .2s linear;
+        }
+
+        #playVideo:hover {
+          opacity: 0.8;
+          color: #eee;
+        }
     </style>
 </head>
 <body>
