--- a/diccionario/index.html
+++ b/diccionario/index.html
@@ -1,1 +1,26 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>diccionario</title><link href="/css/app.2c126960.css" rel="preload" as="style"><link href="/js/app.9709214f.js" rel="preload" as="script"><link href="/js/chunk-vendors.6c22dac2.js" rel="preload" as="script"><link href="/css/app.2c126960.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but diccionario doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.6c22dac2.js"></script><script src="/js/app.9709214f.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="diccionario/favicon.ico">
+  <title>diccionario</title>
+  <link href="diccionario/css/app.2c126960.css" rel="preload" as="style">
+  <link href="diccionario/js/app.9709214f.js" rel="preload" as="script">
+  <link href="diccionario/js/chunk-vendors.6c22dac2.js" rel="preload" as="script">
+  <link href="diccionario/css/app.2c126960.css" rel="stylesheet">
+</head>
+<body>
+  <noscript>
+  <strong>We're sorry but diccionario doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+  <div id="app">
+
+</div>
+  <script src="diccionario/js/chunk-vendors.6c22dac2.js">
+</script>
+  <script src="diccionario/js/app.9709214f.js">
+</script>
+</body>
+</html>
